syntax = "proto3";

package search.v1;

import "google/protobuf/any.proto";


option go_package = "../sidekiq-proto/sidekiq-search/v1";

service SearchService {
  rpc UpdateSearchResult(UpdateSearchResultRequest) returns (UpdateSearchResultResponse);
}

message UpdateSearchResultResponse {
 Status error = 1;
}
message UpdateSearchResultRequest {
  map<string, google.protobuf.Any> data = 1;
  string updateType = 2;
  string args = 3;
}

message Status {
  int32 code = 1;
  string message = 2;
  repeated google.protobuf.Any details = 3;
}
